<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/menu_Item_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="39dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/that_s_the_picture_of_what_ever_you_ordered"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/menu_Item_image"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@+id/menu_Item_image"
        android:text="@string/textview1" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/menu_Item_image"
        android:layout_alignStart="@+id/item_name"
        android:layout_marginBottom="34dp"
        android:text="@string/textview2" />

    <TextView
        android:id="@+id/item_describtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/menu_Item_image"
        android:layout_below="@+id/item_price"
        android:layout_marginStart="23dp"
        android:layout_marginTop="75dp"
        android:scrollbars="vertical"
        android:text="@string/textview3"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Tooltip" />

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="order" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/menu_Item_image"
        android:layout_below="@+id/item_describtion"
        android:layout_marginTop="18dp"
        android:fontFamily="cursive"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold" />
</RelativeLayout>
